# log_server

./: README.md
client/: client.py
server/: CMakeLists.txt  main.cpp  server.cpp  server.h
